SERVER-100651 Cost of stand-alone SKIP and LIMIT is incorrect (#32875)

GitOrigin-RevId: 7939b0367d1af96ff2d67d29ea701b363acd48aa